# src/main/java/org/siri_hate/chat_service/model/entity/Chat.java
@@ -1,27 +1,37 @@
 package org.siri_hate.chat_service.model.entity;
 
 import jakarta.persistence.*;
+import org.siri_hate.chat_service.model.enums.ChatType;
 
 import java.util.ArrayList;
 import java.util.List;
 
 @Entity
-@Inheritance(strategy = InheritanceType.JOINED)
-@DiscriminatorColumn(name = "chat_type")
 @Table(name = "chats")
-public abstract class Chat {
+public class Chat {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "chat_type")
+    private ChatType type;
+
+    private String name;
+
+    @OneToMany(mappedBy = "chat", cascade = CascadeType.ALL, orphanRemoval = true)
+    private List<ChatMember> members = new ArrayList<>();
 
     @OneToMany(mappedBy = "chat", cascade = CascadeType.ALL, orphanRemoval = true)
     private List<Message> messages = new ArrayList<>();
 
     public Chat() {}
 
-    public Chat(Long id, List<Message> messages) {
-        this.id = id;
+    public Chat(ChatType type, String name, List<ChatMember> members, List<Message> messages) {
+        this.type = type;
+        this.name = name;
+        this.members = members;
         this.messages = messages;
     }
 
@@ -31,6 +41,30 @@ public abstract class Chat {
 
     public void setId(Long id) {
         this.id = id;
+    }
+
+    public ChatType getType() {
+        return type;
+    }
+
+    public void setType(ChatType type) {
+        this.type = type;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public List<ChatMember> getMembers() {
+        return members;
+    }
+
+    public void setMembers(List<ChatMember> members) {
+        this.members = members;
     }
 
     public List<Message> getMessages() {
