# src/main/java/org/siri_hate/chat_service/model/entity/group_chat/GroupChatParticipantId.java
@@ -1,31 +1,0 @@
-package org.siri_hate.chat_service.model.entity.group_chat;
-
-import jakarta.persistence.Column;
-import jakarta.persistence.Embeddable;
-
-import java.io.Serializable;
-import java.util.Objects;
-
-@Embeddable
-public class GroupChatParticipantId implements Serializable {
-
-    @Column(name = "chat_id")
-    private Long chatId;
-
-    @Column(name = "user_id")
-    private Long userId;
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o)
-            return true;
-        if (!(o instanceof GroupChatParticipantId that))
-            return false;
-        return Objects.equals(chatId, that.chatId) && Objects.equals(userId, that.userId);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hash(chatId, userId);
-    }
-}
