# src/main/java/org/siri_hate/chat_service/model/enums/ChatType.java
@@ -1,0 +1,6 @@
+package org.siri_hate.chat_service.model.enums;
+
+public enum ChatType {
+    PRIVATE,
+    GROUP
+}
